--- a/Bioskop/pom.xml
+++ b/Bioskop/pom.xml
@@ -66,6 +66,11 @@
     		<version>1.4</version>
 		</dependency>
 		<dependency>
+    	<groupId>commons-validator</groupId>
+    	<artifactId>commons-validator</artifactId>
+   		 <version>1.4.1</version>
+		</dependency>
+		<dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context-support</artifactId>
     <version>3.1.1.RELEASE</version>
