--- a/Bioskop/src/main/resources/application.properties
+++ b/Bioskop/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password = root12345
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 #JPA-Hibernate
-
+spring.aop.proxy-target-class=true
 spring.jpa.show-sql = true
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi
 #sa radom dropuje ih
