--- a/Bioskop/src/main/resources/application.properties
+++ b/Bioskop/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 server.port=9001
-spring.mail.host= smtp.gmail.com
-spring.mail.username = srbulovicdusan@gmail.com
-spring.mail.password = 1234five
-spring.mail.port = 587
-spring.mail.proporties.mail.smtp.starttls.enable = true
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.username=isasittim15@gmail.com
+spring.mail.password=isa12345.
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Spring DataSource
 spring.datasource.url = jdbc:mysql://localhost:3306/isa?useSSL=false&createDatabaseIfNotExist=true
