--- a/Bioskop/pom.xml
+++ b/Bioskop/pom.xml
@@ -32,6 +32,12 @@
 			<version>1.5.7.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.corundumstudio.socketio</groupId>
+			<artifactId>netty-socketio</artifactId>
+			
+			<version>1.7.7</version>
+		</dependency>
 <dependency>
    <groupId>javax.mail</groupId>
    <artifactId>mail</artifactId>
@@ -69,6 +75,10 @@
     		<groupId>javax.mail</groupId>
     		<artifactId>mail</artifactId>
     		<version>1.4</version>
+		</dependency>
+				<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
     	<groupId>commons-validator</groupId>
