--- a/Bioskop/src/main/resources/application.properties
+++ b/Bioskop/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Spring DataSource
-spring.datasource.url = jdbc:mysql://localhost:3306/isa?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username = root
-spring.datasource.password = root12345
+spring.datasource.url = jdbc:mysql://sql2.freemysqlhosting.net:3306/sql2244741?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username = sql2244741
+spring.datasource.password = fU9*rJ4!
 #korisno ako je konekcija dugo u idle stanju
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
