--- a/Bioskop/pom.xml
+++ b/Bioskop/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>ProjectIsa</groupId>
 	<artifactId>Bioskop</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>Bioskop</name>
 	<description>Demo project for Spring Boot</description>
